========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-01-31

  - Added python-magic as an optional depdendency, in order to support imports
    code. Updated http://furius.ca/beancount/doc/install

  - Renamed beancount.scripts.checkdeps to beancount.scripts.deps (annoyed with
    name too similar to beancount.scripts.check and I trip over it all the
    time).

  - Moved ledgerhub.core.compress to beancount.ops.compress and its associated
    test.

  - Moved ledgerhub.identify.filetype to beancount.utils.file_type and its
    associated test and test files.

  - Small improvement to beancount.utils.test_utils.skipIfRaises() to accept
    multiple exceptions.


2016-01-25

  - Moved many of the utility code from ledgerhub.utils to beancount.utils. This
    is beginning the process of migrating and rewriting LedgerHub and
    integrating it into the Beancount source code.

  - Moved the 'remove_crdb' utility script from LedgerHub into
    beancount/experiments/imports.


2016-01-18

  - Committed the Query directive to non-experimental status, for
    beancount-web's usage.


2016-01-16

  - Created the beancount.plugins.coherent_cost plugin which checks that one's
    currencies are either always used with cost, or never at all. This is by far
    the most typical situation whereby a currency is always held at cost, or
    never (and perhaps converted at price or not).

  - Created a function to filter just the transactions, which is such an
    incredibly common operation I should have done this a while ago. I should
    convert all code to use it.


2016-01-16

  - Added a feature to the "beancount.plugins.ira_contribs" plugin to allow the
    further restriction that the trigger posting must include a particular flag
    in order for the insertion to occur. This is to be used in account that have
    sales, whereby just looking at the sign of the posting isn't enough to